<resources>
    <string name="app_name">Dice4Fun</string>
    <string name="strBtnFinish">Exit</string>
    <string name="strBtnStart">Lets go ...</string>
    <string name="strTxtHeader">WELCOME TO DICE FOR FUN</string>
    <string name="strTxtPlayerWelcome">Enter your Name</string>
    <string name="strViewAstronaut">Astronaut</string>
    <string name="strViewThief">Thief</string>
    <string name="strViewMario">Mario</string>
    <string name="strViewAvatar">Avatar</string>
    <string name="strViewDice1">1. Dice</string>
    <string name="strViewDice2">2. Dice</string>
    <string name="strViewDice3">3. Dice</string>
    <string name="strViewDice4">4. Dice</string>
    <string name="strViewDice5">5. Dice</string>
    <string name="strTxtChooseAvatar">Choose your Avatar</string>
    <string name="strTxtScore">Score</string>
    <string name="strTxtNxtPlayer">Next Player</string>
    <string name="strBtnBack">Go back</string>
    <string name="strBtnDice1">Dice 1</string>
    <string name="strBtnDice2">Dice 2</string>
    <string name="strBtnDice3">Dice 3</string>
    <string name="strBtnDice4">Dice 4</string>
    <string name="strBtnDice5">Dice 5</string>
    <string name="strBtnDice6">Dice 6</string>
    <string name="strBtnHouse">House</string>
    <string name="strBtnSmallStreet">Small Street</string>
    <string name="strLargeStreet">Large Street</string>
    <string name="strBtnChance">Chance</string>
    <string name="strTxtDice1">111</string>
    <string name="strTxtDice2">222</string>
    <string name="strTxtDice3">333</string>
    <string name="strTxtDice4">444</string>
    <string name="strTxtDice5">555</string>
    <string name="strTxtDice6">666</string>
    <string name="strTxt3er">3er</string>
    <string name="strTxt4er">4er</string>
    <string name="strTxtHouse">HHH</string>
    <string name="strTxtSmallStreet">SS</string>
    <string name="strTxtLargeStreet">LS</string>
    <string name="strTxtChance">CCC</string>
    <string name="strBtn3er">3er</string>
    <string name="strBtn4er">4er</string>
    <string name="strBtnKniffel">5er Dice +50</string>
    <string name="strBtnRollDice">Roll the Dice</string>
    <string name="strBtnScore">SCORE</string>
    <string name="strBtnEndGame">Quit Game</string>
    <string name="strTxtBye">Bye, bye, see you!</string>
    <string name="strBtnNewPlayer">OK</string>
    <string name="strPlayerCreated"> is playing</string>
    <string name="strDialogTitle">Do you like to set this score 0?</string>
    <string name="strDialogOK">Yes</string>
    <string name="strDialogReturn">Return</string>
    <string name="strViewUpperSection">Upper Section</string>
    <string name="strViewLowerSection">Lower Section</string>
    <string name="strViewBonus">Bonus</string>
    <string name="strViewYatzy">Yatzy</string>
    <string name="strViewScoreAll">Total</string>
    <string name="strBtnInfo">Info</string>
    <string name="strBtnRules">Game Rules</string>
    <string name="strBtnPlayerName">Player Name</string>
    <string name="strPlsEnterName">Please create a player</string>
    <string name="strPlsSelectScore">Please select a result</string>
    <string name="strViewPodium">Podium</string>

</resources>
