<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMiddleYellow">

    <LinearLayout
        android:layout_width="192dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iviewAvatar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/astronaut" />

        <TextView
            android:id="@+id/txtPlayer"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:text="Name"
            android:textAlignment="center"
            android:textColor="@color/colorDarkRed"
            android:textStyle="bold" />
    </LinearLayout>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/btnDice1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="1"
                android:background="@android:color/background_light"
                android:contentDescription="@string/strBtnDice1"
                android:src="@drawable/dice1" />

            <ImageButton
                android:id="@+id/btnDice2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:layout_row="1"
                android:background="@android:color/background_light"
                android:contentDescription="@string/strBtnDice2"
                android:src="@drawable/dice2" />

            <ImageButton
                android:id="@+id/btnDice3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="5"
                android:layout_row="1"
                android:background="@android:color/background_light"
                android:contentDescription="@string/strBtnDice3"
                android:src="@drawable/dice3" />

            <ImageButton
                android:id="@+id/btnDice4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="2"
                android:background="@android:color/background_light"
                android:contentDescription="@string/strBtnDice4"
                android:src="@drawable/dice4" />

            <ImageButton
                android:id="@+id/btnDice5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:layout_row="2"
                android:background="@android:color/background_light"
                android:contentDescription="@string/strBtnDice5"
                android:src="@drawable/dice5" />

            <ImageButton
                android:id="@+id/btnDice6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="5"
                android:layout_row="2"
                android:background="@android:color/background_light"
                android:contentDescription="@string/strBtnDice6"
                android:src="@drawable/dice6" />

            <Button
                android:id="@+id/btn3er"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="3"
                android:background="@android:color/background_light"
                android:text="@string/strBtn3er"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn4er"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:layout_row="3"
                android:background="@android:color/background_light"
                android:text="@string/strBtn4er"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/btnHouse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="5"
                android:layout_row="3"
                android:background="@android:color/background_light"
                android:contentDescription=""
                android:src="@drawable/house" />

            <ImageButton
                android:id="@+id/btnSmallStreet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="4"
                android:background="@android:color/background_light"
                android:src="@drawable/small_street" />

            <ImageButton
                android:id="@+id/btnLargeStreet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:layout_row="4"
                android:background="@android:color/background_light"
                android:src="@drawable/large_street" />

            <ImageButton
                android:id="@+id/btnChance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="5"
                android:layout_row="4"
                android:background="@android:color/background_light"
                android:src="@drawable/question" />

            <TextView
                android:id="@+id/txtDice1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_row="1"
                android:background="@color/colorBrightYellow"
                android:contentDescription="@string/strTxtDice1"
                android:text="@string/strTxtDice1"
                android:textAlignment="center"
                android:textColor="@color/colorDarkRed"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtDice2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="4"
                android:layout_row="1"
                android:background="@color/colorBrightYellow"
                android:contentDescription="@string/strTxtDice2"
                android:text="@string/strTxtDice2"
                android:textAlignment="center"
                android:textColor="@color/colorDarkRed"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtDice3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="6"
                android:layout_row="1"
                android:background="@color/colorBrightYellow"
                android:contentDescription="@string/strTxtDice3"
                android:text="@string/strTxtDice3"
                android:textAlignment="center"
                android:textColor="@color/colorDarkRed"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtDice4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_row="2"
                android:contentDescription="@string/strTxtDice4"
                android:text="@string/strTxtDice4"
                android:textAlignment="center"
                android:textColor="@color/colorDarkRed"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:background="@color/colorBrightYellow" />

            <TextView
                android:id="@+id/txtDice5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="4"
                android:layout_row="2"
                android:contentDescription="@string/strTxtDice5"
                android:text="@string/strTxtDice5"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:background="@color/colorBrightYellow"
                tools:textColor="@color/colorDarkRed" />

            <TextView
                android:id="@+id/txtDice6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="6"
                android:layout_row="2"
                android:background="@color/colorBrightYellow"
                android:contentDescription="@string/strTxtDice6"
                android:text="@string/strTxtDice6"
                android:textAlignment="center"
                android:textColor="@color/colorDarkRed"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt3er"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_row="3"
                android:background="@color/colorBrightYellow"
                android:contentDescription="@string/strTxt3er"
                android:text="@string/strTxt3er"
                android:textAlignment="center"
                android:textColor="@color/colorDarkRed"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt4er"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="4"
                android:layout_row="3"
                android:background="@color/colorBrightYellow"
                android:contentDescription="@string/strTxt4er"
                android:text="@string/strTxt4er"
                android:textAlignment="center"
                android:textColor="@color/colorDarkRed"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtHouse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="6"
                android:layout_row="3"
                android:background="@color/colorBrightYellow"
                android:contentDescription="@string/strTxtHouse"
                android:text="@string/strTxtHouse"
                android:textAlignment="center"
                android:textColor="@color/colorDarkRed"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtSmallStreet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_row="4"
                android:background="@color/colorBrightYellow"
                android:contentDescription="@string/strTxtSmallStreet"
                android:text="@string/strTxtSmallStreet"
                android:textAlignment="center"
                android:textColor="@color/colorDarkRed"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtLargeStreet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="4"
                android:layout_row="4"
                android:background="@color/colorBrightYellow"
                android:contentDescription="@string/strTxtLargeStreet"
                android:text="@string/strTxtLargeStreet"
                android:textAlignment="center"
                android:textColor="@color/colorDarkRed"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtChance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="6"
                android:layout_row="4"
                android:background="@color/colorBrightYellow"
                android:contentDescription="@string/strTxtChance"
                android:text="@string/strTxtChance"
                android:textAlignment="center"
                android:textColor="@color/colorDarkRed"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnKniffel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_columnSpan="6"
                android:layout_gravity="fill_horizontal"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_row="6"
                android:background="@color/colorMiddleYellow"
                android:text="@string/strBtnKniffel"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/iviewDice1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_columnSpan="2"
                android:layout_row="8"
                android:background="@android:color/background_light"
                android:src="@drawable/dice1" />

            <ImageView
                android:id="@+id/iviewDice2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_columnSpan="2"
                android:layout_row="8"
                android:background="@android:color/background_light"
                android:src="@drawable/dice2" />

            <ImageView
                android:id="@+id/iviewDice3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:layout_columnSpan="2"
                android:layout_row="8"
                android:background="@android:color/background_light"
                android:src="@drawable/dice3" />

            <ImageView
                android:id="@+id/iviewDice4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="4"
                android:layout_columnSpan="2"
                android:layout_row="8"
                android:background="@android:color/background_light"
                android:src="@drawable/dice4" />

            <ImageView
                android:id="@+id/iviewDice5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="5"
                android:layout_columnSpan="2"
                android:layout_row="8"
                android:background="@android:color/background_light"
                android:src="@drawable/dice5" />

            <Button
                android:id="@+id/btnRollDice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_columnSpan="6"
                android:layout_gravity="fill_horizontal"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_row="10"
                android:background="@color/colorMiddleYellow"
                android:padding="15dp"
                android:text="@string/strBtnRollDice"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp"
                android:textStyle="bold" />

        </GridLayout>
    </GridLayout>


    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@color/colorMiddleYellow"
        android:contentDescription="@string/strBtnBack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/left_arrow" />

    <Button
        android:id="@+id/btnScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorMiddleYellow"
        android:text="@string/strBtnScore"
        android:textColor="@color/colorDarkRed"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</android.support.constraint.ConstraintLayout>