<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/btnDice1"
                android:layout_column="1"
                android:layout_row="1"
                android:layout_columnSpan="2"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:background="@android:color/background_light"
                android:contentDescription="@string/strBtnDice1"
                android:src="@drawable/dice1"
              />

            <ImageButton
                android:id="@+id/btnDice2"
                android:layout_column="3"
                android:layout_row="1"
                android:layout_columnSpan="2"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:background="@android:color/background_light"
                android:contentDescription="@string/strBtnDice2"
                android:src="@drawable/dice2"/>

            <ImageButton
                android:id="@+id/btnDice3"
                android:layout_column="5"
                android:layout_row="1"
                android:layout_columnSpan="2"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:background="@android:color/background_light"
                android:contentDescription="@string/strBtnDice3"
                android:src="@drawable/dice3"
              />

            <ImageButton
                android:id="@+id/btnDice4"
                android:layout_column="1"
                android:layout_row="2"
                android:layout_columnSpan="2"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:background="@android:color/background_light"
                android:contentDescription="@string/strBtnDice4"
                android:src="@drawable/dice4"
               />

            <ImageButton
                android:id="@+id/btnDice5"
                android:layout_column="3"
                android:layout_row="2"
                android:layout_columnSpan="2"


                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:background="@android:color/background_light"
                android:contentDescription="@string/strBtnDice5"
                android:src="@drawable/dice5"

                />

            <ImageButton
                android:id="@+id/btnDice6"
                android:layout_column="5"
                android:layout_row="2"
                android:layout_columnSpan="2"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:background="@android:color/background_light"
                android:contentDescription="@string/strBtnDice6"
                android:src="@drawable/dice6"
                 />

            <ImageView
                android:id="@+id/iviewDice1"
                android:layout_column="1"
                android:layout_row="7"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:background="@android:color/background_light"
                android:src="@drawable/dice1"
            />

            <ImageView
                android:id="@+id/iviewDice2"
                android:layout_column="2"
                android:layout_row="7"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:background="@android:color/background_light"
                android:src="@drawable/dice2"
                />

            <ImageView
                android:id="@+id/iviewDice3"
                android:layout_column="3"
                android:layout_row="7"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:background="@android:color/background_light"
                android:src="@drawable/dice3"
                />

            <ImageView
                android:id="@+id/iviewDice4"
                android:layout_column="4"
                android:layout_row="7"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:background="@android:color/background_light"
                android:src="@drawable/dice4"
              />

            <ImageView
                android:id="@+id/iviewDice5"
                android:layout_column="5"
                android:layout_row="7"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:background="@android:color/background_light"
                android:src="@drawable/dice5"
                />

        </GridLayout>
    </GridLayout>
</android.support.constraint.ConstraintLayout>